--- a/angular.json
+++ b/angular.json
@@ -1,14 +1,18 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "ea218330-fecf-4cb8-aea4-708c838f1b6e"
+    "analytics": false
   },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "meu-pokemon": {
+    "fabrica-de-pokemon": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -16,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/meu-pokemon",
+            "outputPath": "dist/fabrica-de-pokemon",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -64,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "meu-pokemon:build"
+            "browserTarget": "fabrica-de-pokemon:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "meu-pokemon:build:production"
+              "browserTarget": "fabrica-de-pokemon:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "meu-pokemon:build"
+            "browserTarget": "fabrica-de-pokemon:build"
           }
         },
         "test": {
@@ -90,7 +94,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -112,16 +116,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "meu-pokemon:serve"
+            "devServerTarget": "fabrica-de-pokemon:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "meu-pokemon:serve:production"
+              "devServerTarget": "fabrica-de-pokemon:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "meu-pokemon"
+  "defaultProject": "fabrica-de-pokemon"
 }
